--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,10 @@
 body {
+  background-image:    url(wallpaper.jpg);
+  background-size:     cover;
+  background-repeat:   no-repeat;
+}
+
+body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
