--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   background-image:    url(wallpaper.jpg);
   background-size:     cover;
   background-repeat:   no-repeat;
+  font-family: Tahoma, Geneva, sans-serif
 }
 
 body {
@@ -20,4 +21,12 @@ th {
 table {
   overflow-y: scroll;
   width: 100%;
+}
+
+#moonResults {
+  background:rgba(255,255,255,0.5);
+}
+
+input {
+  padding-bottom: 1rem;
 }
